--- a/Thera+loan+rmd.Rmd
+++ b/Thera+loan+rmd.Rmd
@@ -5,12 +5,10 @@ date: "13/05/2020"
 output: pdf_document
 ---
 
-```{r}
 
 setwd("C:/Users/Osilade/Documents/PG- Data and Business/machine learning/Project/")
-```
 
-```{r}
+
 Thera_Bank_Loan<- read_excel("Thera Bank_Personal_Loan_Modelling-dataset-1.xlsx",+ sheet = "Bank_Personal_Loan_Modelling")
 
 View(Thera_Bank_Loan)
@@ -27,11 +25,6 @@ class(Thera_Bank_Loan)
 colnames(Thera_Bank_Loan)
 
 
-```
-
-
-
-```{r}
 library(DataExplorer)
 introduce(Thera_Bank_Loan)
 plot_str(Thera_Bank_Loan)
@@ -44,9 +37,7 @@ plot_bar(Thera_Bank_Loan)
 ## shows 5 out of 14 variables 
 ##
 
-```
 
-```{r}
 colnames(Thera_Bank_Loan)<-make.names(colnames(Thera_Bank_Loan))
 Thera_Bank_Loan=Thera_Bank_Loan[-c(3,5,6)]
 
@@ -57,11 +48,8 @@ Thera_Bank_Loan=Thera_Bank_Loan[-c(3,5,6)]
 ##customer relationship - mortgage, securities account, CD account ,CC Avg 
 ##customer response - personal loan, online, credit card 
 
-```
-
 
 #insights from the dataset 
-```{r}
 sum(Thera_Bank_Loan$Personal.Loan=='1')
 sum(Thera_Bank_Loan$Personal.Loan =='0')
 sum(Thera_Bank_Loan$CreditCard =='1')
@@ -72,14 +60,11 @@ sum(Thera_Bank_Loan$Online =='1')
 sum(Thera_Bank_Loan$Online=='0')
 sum(Thera_Bank_Loan$CD.Account =='1')
 sum(Thera_Bank_Loan $CD.Account=='0')
-sum(Thera_Bank_Loan $Mortgage== '0')
-     
-```
+sum(Thera_Bank_Loan $Mortgage== '0)   
 
 
 
 ## conducting univirate analysis 
-```{r}
 attach(Thera_Bank_Loan)
 colnames(Thera_Bank_Loan)
 
@@ -91,10 +76,8 @@ boxplot(Age..in.years., horizontal = TRUE, Col = 'dark green', main= 'boxplot of
 boxplot(Education, horizontal = TRUE, Col = 'dark green', main= 'boxplot of education')
 
 ##shows extreme values in the data,towards the right pushing the boxplot towards the left.
-```
 
 ##Checking for skewness of data 
-```{r}
 colnames(Thera_Bank_Loan)
 
 hist(Personal.Loan)
@@ -113,11 +96,7 @@ hist(Securities.Account)
 hist(Education)
 
 
-```
-
-
 ## barplots
-```{r}
 plot_bar(Personal.Loan)
 plot_bar(Online)
 plot_bar(Education)
@@ -138,10 +117,8 @@ plot_density(CCAvg)
 plot_density(Securities.Account)
 ##no continous feature
 
-```
-
 ##working with mean
-```{r}
+
 ##checking the IQR
 Mortgage_IQR <- IQR(Mortgage)
 print(Mortgage_IQR)
@@ -159,10 +136,8 @@ Personal_Loan_SD <- sd(Personal.Loan)
 CreditCard_SD <- sd(CreditCard)
 Education_SD <- sd(Education)
 
-```
-
 ##Performing Bivirate analysis 
-```{r}
+
 
 plot_correlation(Thera_Bank_Loan)
 
@@ -182,16 +157,16 @@ cor.test(Personal.Loan,CD.Account)$p.value
 #1.278403e-116
 
 # ** All the p.valuess << 0.001 indicating these correlations are significant
-```
 
-```{r}
+
+
 rpivotTable::
 rpivotTable(Thera_Bank_Loan)
-```
+
 
 
 #clustering
-```{r}
+
 colnames(Thera_Bank_Loan)
 head(Thera_Bank_Loan,10)
 Thera_distMatrix = dist(x=Thera_Bank_Loan[,1:11], method = "euclidean") 
@@ -205,21 +180,15 @@ View(Thera.Scaled)
 Thera_bank_distance = dist(x=Thera.Scaled, method = "euclidean") 
 print(Thera_bank_distance, digits = 3)
 
-```
 
 
 # setting a seed for the cluster
-```{r}
+
 
 seed=1000
 set.seed(seed) 
 
 #since kmeans uses a randomized starting point for cluster centroids
-
-
-```
-
-```{r}
 
 library(NbClust)
 Thera_loan_Nc <- NbClust(Thera_Bank_Loan[,-1], min.nc = 2, max.nc = 6, method = "kmeans")
@@ -230,9 +199,9 @@ Thera_loan_Nc <- NbClust(Thera_Bank_Loan[,-1], min.nc = 2, max.nc = 6, method = 
 ## * 13 proposed 4 as the best number of clusters 
 
 table(Thera_loan_Nc$Best.n[1, ])
-```
+
 # Create clusters for k=4, k=3 and k=2 for comparative analysis
-```{r}
+
 set.seed(seed)
 clust4 = kmeans(x=Thera_Bank_Loan, centers = 4, nstart = 5)
 print(clust4)
@@ -241,9 +210,9 @@ clust3 = kmeans(x=Thera_Bank_Loan, centers = 3, nstart = 5)
 clust3
 clust2 = kmeans(x=Thera_Bank_Loan, centers = 2, nstart = 5)
 clust2
-```
+
 # Visualise clusters 
-```{r}
+
 library(factoextra)
 k_clust4 = fviz_cluster(list(data = Thera_Bank_Loan,cluster = clust4 $cluster)) + ggtitle("k = 4")
 k_clust4
@@ -254,15 +223,10 @@ k_clust3
 k_clust2 = fviz_cluster(list(data = Thera_Bank_Loan [, -1],cluster = clust2 $cluster)) + ggtitle("k = 2")
 k_clust2
 
-```
-
-```{r}
 library(gridExtra)
 grid.arrange( k_clust4,k_clust3, k_clust2, nrow = 2)
 
-```
 # Create cluster profiles
-```{r}
 # k = 4
 aggr_mean_4<- aggregate(Thera_Bank_Loan[, -1], list(clust4$cluster), mean)
 k4cluster.profile <- data.frame(Cluster = aggr_mean_4[, 1],
@@ -270,9 +234,7 @@ k4cluster.profile <- data.frame(Cluster = aggr_mean_4[, 1],
                                  as.vector(table(clust4$cluster)),
                                aggr_mean_4[, -1])
 print(k4cluster.profile)
-```
 # k = 3
-```{r}
 
 aggr_mean_3 <- aggregate(Thera_Bank_Loan[, -1], list(clust3 $cluster), mean)
 k3cluster.profile <- data.frame(Cluster = aggr_mean_3[, 1],
@@ -281,9 +243,7 @@ k3cluster.profile <- data.frame(Cluster = aggr_mean_3[, 1],
                                 aggr_mean_3[, -1])
 k3cluster.profile
 
-```
 # k = 2
-```{r}
 
 aggr_mean_2 <- aggregate(Thera_Bank_Loan[, -1], list(clust2$cluster), mean)
 k4cluster.profile <- data.frame(Cluster = aggr_mean_2[, 1],
@@ -291,11 +251,9 @@ k4cluster.profile <- data.frame(Cluster = aggr_mean_2[, 1],
                                   as.vector(table(clust2$cluster)),
                                 aggr_mean_2[, -1])
 k4cluster.profile
-```
 
 #CART
 #dividing into Train and test data
-```{r}
 library(caTools)
 set.seed(200) #Input any random number
 Thera_Bank_Loan <- Thera_Bank_Loan[-c(3,5,6)]
@@ -306,46 +264,38 @@ Thera_Train = Thera_Bank_Loan[Thera_data,]
 dim(Thera_Train)
 Thera_Test = Thera_Bank_Loan[-Thera_data,]
 dim(Thera_Test)
-```
 
-
-```{r}
 summary(Thera_Train)
 summary(Thera_Test)
-```
+
 
 
 #Checing the delinquency distribution
-```{r}
 attach(Thera_Train)
 table(Personal.Loan)
-```
+
 
 #Setting the control parameters
-```{r}
+
 library(rpart)
 Thera_ctrl_parameter = rpart.control( minbucket = 10, cp = 0, xval = 5)
 
-```
-
-
 #Building the CART model
-```{r}
+
 Thera_Cart_Model<- rpart(formula = Personal.Loan~., data = Thera_Train, 
                          method = "class",control = Thera_ctrl_parameter)
 Thera_Cart_Model
-```
+
 
 #plotting cart model 
-```{r}
+
 
 library(rattle)
 fancyRpartPlot(Thera_Cart_Model, cex= 0.6)
 
-```
 
 ##pruning to see errors
-```{r}
+
 
 printcp(Thera_Cart_Model)
 plotcp(Thera_Cart_Model)
@@ -356,9 +306,9 @@ printcp(Thera_Cart_Model)
 Thera_ptree
 fancyRpartPlot(Thera_ptree)
 
-```
+
 #Model Performance
-```{r}
+
 library(ROCR)
 library(StatMeasures)
 
@@ -368,9 +318,8 @@ Thera_predict.class <- predict(Thera_Cart_Model, Thera_Train , type="class")
 Thera_predict.score <- predict(Thera_Cart_Model, Thera_Train)
 head(Thera_Train)
 
-```
 
-```{r}
+
 #Checking the classification error
 
 library(ROCR)
@@ -378,18 +327,16 @@ library(ineq)
 
 with(Thera_Train, table(Personal.Loan, Thera_predict.class))
 nrow(Thera_Train)
-```
 
-```{r}
+
+
 #Building the ROC curve and lift charts
 Personal.Loan <- as.factor(Personal.Loan)
 Thera_pred <- prediction(Thera_predict.score[,2],Personal.Loan)
 Thera_perf <- performance(Thera_pred, "tpr", "fpr")
 plot(Thera_perf,main = "ROC curve")
 
-```
 
-```{r}
 #Model validation parameters
 KS <- max(attr(Thera_perf, 'y.values')[[1]]-attr(Thera_perf, 'x.values')[[1]])
 auc <- performance(Thera_pred,"auc"); 
@@ -397,9 +344,7 @@ auc <- as.numeric(auc@y.values)
 
 auc
 KS
-```
 
-```{r}
 
 # Scoring test sample and validating the same
 Thera_test_predict.class <- predict(Thera_Cart_Model, Thera_Test, type="class")
@@ -409,21 +354,18 @@ head(Thera_Test)
 with(Thera_Test, table(Online,Thera_test_predict.class))
 nrow(Thera_Test)
 
-```
 
 #random forest
 
 
-```{r}
+
 Thera_Train$Personal.Loan <- as.factor(Thera_Train$Personal.Loan)
 Thera_Test$Personal.Loan <- as.factor(Thera_Test$Personal.Loan)
 
 
 print (sum(Thera_Train$Personal.Loan=='1')/nrow(Thera_Train))
-```
 
 
-```{r}
 set.seed(1000)
 
 library(randomForest)
@@ -432,7 +374,7 @@ Thera_rndForest <- randomForest(Thera_Train$Personal.Loan~ ., data = Thera_Train
 
 ##Print the model to see the OOB and error rate
 print(Thera_rndForest)
-```
+
 
 
 ##Plot the RF to know the optimum number of trees
@@ -453,26 +395,20 @@ Thera_tune_forest = tuneRF(x=Thera_Train[,-c(7)],y=Thera_Train$Personal.Loan,mtr
 ```
 
 ##Build the refined RF model
-```{r}
+
 Thera_ref_forest = randomForest(Thera_Train$Personal.Loan~.,data=Thera_Train,ntree=51,mtry=3,nodesize=10,importance=TRUE)
 print(Thera_ref_forest)
 
-```
 
 
-
-
-```{r}
 library(caret)
 library(e1071)
-```
+
 
 #Lets make predictions on the training data and measure the prediction error rate on train as well as test data set
 
-```{r}
 Thera_random_predict = predict(Thera_ref_forest,data=Thera_Train,type="class")
 Thera_random_prob = predict(Thera_ref_forest,data=Thera_Train,type="prob")[,"1"]
-```
 
 ##using the test data to predict
 ```{r}
